# agent-testing

./: .env.dist  .gitignore  README.md  agent.py  car_sales.py  characters.py  log.py  mark_and_jeremy.py  pyproject.toml  shopkeeper.py  utils.py  v2.py
tests/: test_agent.py
